# tint3

./: .clang  .clang_old  .gitignore  .project  CMakeLists.txt  LICENSE  README.md  makefile
include/: xlibCtrl.h
include/Controller/: DisplayCtrl.h  SurfaceCtrl.h
include/Model/: Display.h  Surface.h
include/View/: MainView.h
src/: tint3.cpp  xlibCtrl.cpp
src/Controller/: DisplayCtrl.cpp  SurfaceCtrl.cpp
src/Model/: Display.cpp  Surface.cpp
src/View/: MainView.cpp
